--- a/index.html
+++ b/index.html
@@ -3433,8 +3433,9 @@
 
 
 <blockquote class="explain">
+Welcome to the digital Means of Production Garden. The garden itself is located on the unceded traditional territories of the Musqueam, Squamish and Tsleil-Waututh people at E. 6th and St Catherines in Vancouver Canada.
 
-  This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo This text will explain the digital garden. wohooo
+Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and uses of the plants found on site.
 
 </blockquote>
 
