--- a/index.html
+++ b/index.html
@@ -3435,13 +3435,13 @@
 <blockquote class="explain">
 Welcome to the digital Means of Production Garden. The garden itself is located on the unceded traditional territories of the Musqueam, Squamish and Tsleil-Waututh people at E. 6th and St Catherines in Vancouver Canada.
 
-Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and uses of the plants found on site.
+Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and uses of the plants found on site. With each visit one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
 
 </blockquote>
 
 <blockquote class="explain_pt2">
 
-this is  more info hehe.this is  more info hehe.this is  more info hehe.this is  more info hehe.this is  more info hehe.
+ This project could not have been completed without the help of the following people: Sharon Kallis, David Gowman, Lori Synder, Catherine Shapiro, Sandy Riecken, Jessica Eguia and Mikaela Kautzky. Thank you for sharing your knowledge, time, drawings and photos. -Sarah Holloway 2020
 
 </blockquote>
 
