fixing broken links

--- a/index.html
+++ b/index.html
@@ -40,19 +40,60 @@
 
   <button onclick="myFunction()" id="expandbutton">  Open Map </button>
 
-  <p class="explain">
-  Welcome to the digital Means of Production Garden. The garden itself is located on the unceded traditional territories of the Musqueam, Squamish and Tsleil-Waututh people at E. 6th and St Catherines in Vancouver Canada.
-
-  Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and uses of the plants found on site. With each visit one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
-
-</p>
 
 
-  <p class="explain">
+ <div class="Id_formating">
 
-   This project could not have been completed without the help of the following people: Sharon Kallis, David Gowman, Lori Synder, Catherine Shapiro, Sandy Riecken, Jessica Eguia and Mikaela Kautzky. Thank you for sharing your knowledge, time, drawings and photos. -Sarah Holloway 2020
+ <button onclick="fibre_plants_button()" id="fibre_plants_button"> Fiber Plants  </button>
+ <br>
+ <a href="index.html" id="fibrerandolink">
+  <div id="popdownfibre">
+   <div class="fibre_plant_id">
+   </div>
+   <p id="fibre_plant_id_name"> loading </p>
+ </div>
+ </a>
+ </div>
 
- </p>
+   <div class="Id_formating2">
+
+   <button onclick="dye_plants_button()" id="dye_plants_button"> Dye plants </button>
+   <br>
+   <a href="index.html" id="dyerandolink">
+     <div id="popdowndye">
+     <div class="dye_plant_id">
+     </div>
+     <p id="dye_plant_id_name"> loading </p>
+   </div>
+ </a>
+ </div>
+
+ <div class="Id_formating3">
+
+ <button onclick="food_plants_button()" id="food_plants_button"> Food </button>
+ <br>
+ <a href="index.html" id="foodrandolink">
+   <div id="popdownfood">
+   <div class="food_plant_id">
+   </div>
+   <p id="food_plant_id_name"> loading </p>
+ </div>
+ </a>
+ </div>
+
+ <div class="Id_formating4">
+
+ <button onclick="wood_button()" id="wood_button"> Wood </button>
+ <br>
+ <a href="index.html" id="woodrandolink">
+   <div id="popdownwood">
+   <div class="wood_plant_id">
+   </div>
+   <p id="wood_plant_id_name"> loading </p>
+ </div>
+ </a>
+ </div>
+
 
 <table id="lets">
 
@@ -98,7 +139,16 @@
         <col style= "width: 2%"id="column36">
     </colgroup>
 
-	<caption>Means_of_Production_Garden</caption>
+	<caption>  To find out more about the Means of  Production garden and its history, <a class= "earthand" href="https://earthand.com/our-fibre-shed/means-of-production-garden/"> visit the garden page </a> on the <a class= "earthand" href="https://earthand.com/"> EartHand website </a>.
+        <br>
+        <br>
+        This project could not have been completed without the help of the following people: Sharon Kallis, David Gowman, Lori Synder, Catherine Shapiro, Sandy Riecken, Jessica Eguia, Jaymie Johnson and Mikaela Kautzky. Thank you for sharing your knowledge, time, drawings, and photos.
+      And thank you to Oliver Kellhammer, who started the garden in 2002.
+      <br>
+      -Sarah Holloway 2021
+
+
+</caption>
   <tr class= "row1">
 		<td class="bushel" ></td>
 		<td class="bushel" ></td>
@@ -3399,57 +3449,21 @@
     <td class="a_hug"></td>
 	</tr>
 
-<div class="Id_formating">
+  <p class="explain">
 
-<button onclick="fibre_plants_button()" id="fibre_plants_button"> Fiber Plants  </button>
+    <span class="hellohellohello"> Welcome to the digital Means of Production Garden. </span> The garden itself is located on the unceded traditional territories of the Musqueam, Squamish and Tsleil-Waututh people at E. 6th and St Catherines in Vancouver Canada. Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and the uses of the plants found on site. With each visit, one plant from each traditional use is presented.     I invite you to click around, scroll and refresh.
+
+</p>
+
+  <p class="explain">
+
+    This 1 year project could not possibly hold all of the information about a rich and complex planted 20 year garden. Information that is offered is often vague on purpose, in part to not deny the visitor the learning journey of personal discovery vs overload of information. Also, past challenges of plant theft and vandalism in this public urban space from oversharing leads the core stewards to be cautious in what information is publicly accessible with ease online.
+    Like a true garden, do not expect perfection in the pages that follow, but rather enjoy the whimsy - the flourishes of activity and evidence of energy output in certain areas- and know like any garden this website can truly never be ‘done’.
 <br>
-<a href="index.html" id="fibrerandolink">
- <div id="popdownfibre">
-  <div class="fibre_plant_id">
-  </div>
-  <p id="fibre_plant_id_name"> loading </p>
-</div>
-</a>
-</div>
-
-  <div class="Id_formating2">
-
-  <button onclick="dye_plants_button()" id="dye_plants_button"> Dye plants </button>
-  <br>
-  <a href="index.html" id="dyerandolink">
-    <div id="popdowndye">
-    <div class="dye_plant_id">
-    </div>
-    <p id="dye_plant_id_name"> loading </p>
-  </div>
-</a>
-</div>
-
-<div class="Id_formating3">
-
-<button onclick="food_plants_button()" id="food_plants_button"> Food </button>
 <br>
-<a href="index.html" id="foodrandolink">
-  <div id="popdownfood">
-  <div class="food_plant_id">
-  </div>
-  <p id="food_plant_id_name"> loading </p>
-</div>
-</a>
-</div>
+The language this site relies upon is English and Latin for plant names. We are just beginning the process of decolonizing our tongues in how we address and label the plants, and hope this part of the project can grow in the years to come. If you have plant knowledge related to names you would like to see updated and included, please reach out to earthandmapping(at)gmail.com.
 
-<div class="Id_formating4">
-
-<button onclick="wood_button()" id="wood_button"> Wood </button>
-<br>
-<a href="index.html" id="woodrandolink">
-  <div id="popdownwood">
-  <div class="wood_plant_id">
-  </div>
-  <p id="wood_plant_id_name"> loading </p>
-</div>
-</a>
-</div>
+  </p>
 
 
 
