fixing more bugs 🐛

--- a/finder.html
+++ b/finder.html
@@ -96,7 +96,7 @@
 <br>
 <a href="Plantain.html">  Plantain  </a>
 <br>
-<a href="willow.html">  Yellow Willow  </a>
+<a href="yellow willow.html">  Yellow Willow  </a>
 <br>
 <a href="Yucca.html">  Yucca  </a>
 
@@ -132,7 +132,8 @@
 <a href="Ocean Spray (Iron Wood).html">  Ocrean Spray (Iron Wood)  </a>
 <br>
 <a href="Spruce.html">  Spruce Tree  </a>
-
+<br>
+<a href="white ash.html">  White Ash tree  </a>
 
 
 
