--- a/yellow willow.html
+++ b/yellow willow.html
@@ -25,7 +25,8 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/willow2.jpg); height:1800px;">
+<body ID="frame_test" style="background-image:url(images/green-willow2.jpg); height: 1500px;
+;">
   <div ID="info">
       <div class="righthandline">
 
@@ -112,7 +113,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Willow </h1>
+          <h1> Green Willow </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
