--- a/Strawberry.html
+++ b/Strawberry.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/strawberry2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/Strawberry2.jpg); height:2000px;">
   <div ID="info">
       <div class="righthandline">
 
